Finished creating User table in database